[package]
name = "App"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["log"] }
rayon = "1.10.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

stdx={path="../stdx",features = ["crc"]}