[package]
name = "perf_db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
wsdot = {path = "../wsdot"}
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }